--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -8,10 +8,10 @@
     
     
     <style name="LoginThemeYellow" parent="Theme.AccountKit">
-        <item name="com_accountkit_primary_color">#f4bf56</item>
+        <item name="com_accountkit_primary_color">#1292B4</item>
         <item name="com_accountkit_primary_text_color">@android:color/white</item>
-        <item name="com_accountkit_secondary_text_color">#44566b</item>
-        <item name="com_accountkit_status_bar_color">#ed9d00</item>
+        <item name="com_accountkit_secondary_text_color">#000000</item>
+        <item name="com_accountkit_status_bar_color">#00BCD4</item>
 
         <item name="com_accountkit_input_accent_color">?attr/com_accountkit_primary_color</item>
         <item name="com_accountkit_input_border_color">?attr/com_accountkit_primary_color</item>
